--- a/src/styles/_partials/pages/_photography.scss
+++ b/src/styles/_partials/pages/_photography.scss
@@ -1,11 +1,11 @@
-@import "./../_variables";
+@import './../variables';
 
 #photography-background {
-  background-image: url("./../img/camera.jpg");
+  background-attachment: fixed;
   background-blend-mode: overlay, darken;
   background-color: $aqua-spring;
+  background-image: url('./../img/camera.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
 }
