--- a/src/styles/_components/_buttons.scss
+++ b/src/styles/_components/_buttons.scss
@@ -1,47 +1,46 @@
-@import "../_partials/_variables";
+@import '../_partials/variables';
 
 button {
   background: none;
   border: 0;
-  box-sizing: border-box;
   box-shadow: inset 0 0 0 2px $orange;
+  box-sizing: border-box;
   color: $orange;
   font-size: inherit;
   font-weight: 700;
+  left: 50%;
   margin: 1em;
+  margin-right: -50%;
   padding: 1em 2em;
+  position: relative;
   text-align: center;
   text-transform: capitalize;
-  position: relative;
-  vertical-align: middle;
-  position: relative;
-  left: 50%;
-  margin-right: -50%;
   transform: translate(-50%);
+  vertical-align: middle;
 
   &::before,
   &::after {
     box-sizing: border-box;
     content: '';
+    height: 100%;
     position: absolute;
     width: 100%;
-    height: 100%;
   }
 }
 
 .draw {
-    transition: color 0.25s;
+  transition: color .25s;
 
   &::before,
   &::after {
     border: 2px solid transparent;
-    width: 0;
     height: 0;
+    width: 0;
   }
 
   &::before {
-    top: 0;
     left: 0;
+    top: 0;
   }
 
   &::after {
@@ -55,25 +54,25 @@ button {
 
   &:hover::before,
   &:hover::after {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 
   &:hover::before {
-    border-top-color: $cyan; // Make borders visible
     border-right-color: $cyan;
+    border-top-color: $cyan;
     transition:
-      width 0.25s ease-out, // Width expands first
-      height 0.25s ease-out 0.25s; // And then height
+      height .25s ease-out .25s,
+      width .25s ease-out;
   }
 
   &:hover::after {
-    border-bottom-color: $cyan; // Make borders visible
+    border-bottom-color: $cyan;
     border-left-color: $cyan;
     transition:
-      border-color 0s ease-out 0.5s, // Wait for ::before to finish before showing border
-      width 0.25s ease-out 0.5s, // And then exanding width
-      height 0.25s ease-out 0.75s; // And finally height
+      border-color 0s ease-out .5s,
+      width .25s ease-out .5s,
+      height .25s ease-out .75s;
   }
 }
 
@@ -83,20 +82,24 @@ button {
   }
 
   &::after {
-    top: 0;
     left: 0;
+    top: 0;
   }
 
   &:hover::before {
-    border-top-color: $blue;
     border-right-color: $blue;
+    border-top-color: $blue;
   }
 
   &:hover::after {
     border-bottom-color: $blue;
     border-left-color: $blue;
     transition: // Animate height first, then width
-      height 0.25s ease-out,
-      width 0.25s ease-out 0.25s;
+      height .25s ease-out,
+      width .25s ease-out .25s;
   }
+}
+
+.talk-btn {
+  margin-top: 2em;
 }
