--- a/src/styles/_partials/pages/_community.scss
+++ b/src/styles/_partials/pages/_community.scss
@@ -1,20 +1,21 @@
-@import "./../_variables", "./../_mixins";
+@import './../variables', './../mixins';
 
 #community-background {
-  background-image: url("./../img/community.jpg");
+  background-attachment: fixed;
   background-blend-mode: overlay, darken;
   background-color: $aqua-spring;
+  background-image: url('./../img/community.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
 }
 
 .communities {
+  @include border-radius(5px);
+
   background-color: $white;
   text-align: justify;
 
-  @include border-radius(5px);
 }
 
 img.img-rounded {
@@ -22,22 +23,8 @@ img.img-rounded {
   width: 250px;
 }
 
-div.col-md-6, div.col-sm-12, div.col-xs-12 {
+div.col-md-6,
+div.col-sm-12,
+div.col-xs-12 {
   margin: 0, 0, 25px;
-  // padding: 0;
-}
-
-.test {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.test1 {
-  // padding: 5px;
-  // width: 200px;
-  // height: 150px;
-  // margin-top: 10px;
-
-  // line-height: 150px;
 }
