--- a/src/styles/_components/_buttons.scss
+++ b/src/styles/_components/_buttons.scss
@@ -9,7 +9,7 @@ button {
   font-size: inherit;
   font-weight: 700;
   left: 50%;
-  margin: 1em;
+  margin: 3em;
   margin-right: -50%;
   padding: 1em 2em;
   position: relative;
@@ -26,6 +26,10 @@ button {
     position: absolute;
     width: 100%;
   }
+}
+
+.btn-default {
+  margin-top: 2em;
 }
 
 .draw {
