--- a/src/styles/_partials/pages/_about.scss
+++ b/src/styles/_partials/pages/_about.scss
@@ -3,11 +3,17 @@
 #about-background {
   background-attachment: fixed;
   background-blend-mode: overlay, darken;
-  background-color: $aqua-spring;
-  background-image: url('./../img/code1.jpg');
+  background-color: $light-grey;
+  background-image: url('./../img/tanya.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 4em;
+  padding-top: 4em;
+}
+
+.about {
+  color: $dark-grey;
 }
 
 img.img-thumbnail {
@@ -20,7 +26,7 @@ img.img-thumbnail {
 }
 
 .about-dynamic-header {
-  padding: 15px;
+  padding-bottom: 10px;
 }
 
 .center-social {
