--- a/src/styles/_partials/pages/_photography.scss
+++ b/src/styles/_partials/pages/_photography.scss
@@ -4,7 +4,7 @@
   background-attachment: fixed;
   background-blend-mode: overlay, darken;
   background-color: $aqua-spring;
-  background-image: url('./../img/camera.jpg');
+  background-image: url('~/public/imgcamera.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
