--- a/src/styles/_partials/pages/_about.scss
+++ b/src/styles/_partials/pages/_about.scss
@@ -4,7 +4,7 @@
   background-attachment: fixed;
   background-blend-mode: overlay, darken;
   background-color: $light-grey;
-  background-image: url('~/public/img/tanya.jpg');
+  background-image: url('~/img/tanya.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
