--- a/src/styles/_partials/pages/_contact.scss
+++ b/src/styles/_partials/pages/_contact.scss
@@ -4,7 +4,7 @@
   // background-attachment: fixed;
   // background-blend-mode: overlay, darken;
   // background-color: $aqua-spring;
-  // background-image: url('~/public/imgwriting.jpg');
+  // background-image: url('~/img/writing.jpg');
   // background-position: 50% 50%;
   // background-repeat: no-repeat;
   // background-size: cover;
