--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -1,6 +1,6 @@
 // **** Fonts ****** //
 $font-headings: 'Oxygen', sans-serif;
-$font-body: 'Lora', serif;
+$font-body: 'Oxygen', sans-serif;
 
 // **** Colours ****** //
 $orange: rgba(241, 80, 37, 1);
