--- a/src/styles/_components/_footer.scss
+++ b/src/styles/_components/_footer.scss
@@ -2,7 +2,9 @@
 
 footer {
   align-items: center;
-  background-color: $dark-grey;
+  background: #283048;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #859398, #283048);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #859398, #283048); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   bottom: 0;
   clear: both;
   color: $light-grey;
