--- a/src/styles/_components/_navbar.scss
+++ b/src/styles/_components/_navbar.scss
@@ -5,7 +5,10 @@
 }
 
 nav {
-  background-color: $dark-grey;
+  background: #283048;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #859398, #283048);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #859398, #283048); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   display: block;
 
   a {
