gradient colours added to variables

--- a/src/styles/_partials/_variables.scss
+++ b/src/styles/_partials/_variables.scss
@@ -10,3 +10,5 @@ $light-grey: rgba(206, 208, 206, 1);
 $dark-grey: rgba(25, 25, 25, 1);
 $cyan: #60daaa;
 $blue: #0eb7da;
+$gradient-blue: #283048;
+$gradient-silver: #859398;
