images moved to cloudinary

--- a/src/styles/_partials/pages/_portfolio.scss
+++ b/src/styles/_partials/pages/_portfolio.scss
@@ -4,7 +4,7 @@
   background-attachment: fixed;
   background-blend-mode: overlay, darken;
   background-color: $aqua-spring;
-  background-image: url('~/img/code1.jpg');
+  background-image: url('http://res.cloudinary.com/tanyapowell/image/upload/h_210/f_auto,q_auto/code.jpg');
   // background: #E6DADA;  /* fallback for old browsers */
   // background: -webkit-linear-gradient(to right, #274046, #E6DADA);  /* Chrome 10-25, Safari 5.1-6 */
   // background: linear-gradient(to right, #274046, #E6DADA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
